# Brainless-WAF

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  DEVELOPMENT.md  GOVERNANCE.md  Makefile  README.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-LICENSES.md  docker-compose.dev.yml
core/: Dockerfile  go.mod  go.sum
core/config/: config.yaml
core/rules/: default.rules
dashboard/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs/: anomaly_scoring_design.md  api.md  architecture.md  brf_spec.md  configuration.md  dashboard.md  deployment.md  development_plan.md  installation.md  migration.md  observability.md  performance.md  plugins.md  rules.md  tls_rate_limit_design.md  troubleshooting.md
docs/adr/: 001-core-language.md  002-proxy-approach.md  003-006-decisions.md  ADR-001-core-language.md  ADR-002-interception-strategy.md  ADR-003-configuration-storage.md  (+1 more)
management/: alembic.ini  pyproject.toml  test.db
management/app/: main.py
management/app/api/v1/: deps.py
management/app/api/v1/endpoints/: auth.py  config.py  events.py  health.py  ip_lists.py  rules.py
management/app/core/: api_keys.py  security.py
management/app/db/: session.py
management/app/models/: models.py
management/app/schemas/: config.py  event.py  ip_list.py  rule.py  token.py
management/app/services/: notifier.py
management/migrations/: env.py
management/migrations/versions/: 20260314_0001_initial_schema.py
management/proto/: waf.proto
management/tests/: test_main.py  test_migrations.py
(+25 files in other folders)
